--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,7 +28,7 @@
             android:id="@+id/nav_head_img"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            app:srcCompat="@drawable/customer" />
+            app:srcCompat="@drawable/technician_icon" />
 
         <TextView
             android:id="@+id/nav_head_text"
