--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,7 +5,10 @@
     android:id="@+id/aboutfrag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:isScrollContainer="true"
+    app:layout_scrollFlags="scroll|enterAlways"
+    android:overScrollMode="always">
 
     <ImageButton
         android:id="@+id/profile"
