--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ir" />
 
     <TextView
-        android:id="@+id/timev"
+        android:id="@+id/time_v"
         android:layout_width="258dp"
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
@@ -79,7 +79,7 @@
         android:layout_marginLeft="24dp"
         android:text="8am-12noon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timev" />
+        app:layout_constraintTop_toBottomOf="@+id/time_v" />
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -89,7 +89,7 @@
         android:layout_marginLeft="24dp"
         android:text="12pm-5pm"
         app:layout_constraintStart_toEndOf="@+id/checkBox"
-        app:layout_constraintTop_toBottomOf="@+id/timev" />
+        app:layout_constraintTop_toBottomOf="@+id/time_v" />
 
     <CheckBox
         android:id="@+id/checkBox3"
@@ -159,5 +159,15 @@
         android:text="Button"
         app:layout_constraintStart_toEndOf="@+id/info"
         app:layout_constraintTop_toBottomOf="@+id/pin" />
+
+    <ImageView
+        android:id="@+id/itm_img"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info"
+        app:srcCompat="@drawable/dreamstime_m_117494793" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
