--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".SignInActivity"
     app:layout_scrollFlags="scroll|enterAlways"
-    android:overScrollMode="always">
+    android:overScrollMode="always"
+    android:background="@drawable/lighting">
 
     <EditText
         android:id="@+id/fName"
