--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -138,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/itm_img" />
 
     <Button
-        android:id="@+id/nw_add"
+        android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
