--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -14,7 +14,12 @@
         android:background="#4CAF50"
         android:fitsSystemWindows="true">
 
-        <androidx.appcompat.widget.Toolbar
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_main"
                 android:layout_width="300dp"
                 android:layout_height="?attr/actionBarSize"
@@ -22,6 +27,15 @@
 
                 />
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="42dp"
+                android:layout_height="match_parent"
+
+                app:backgroundTint="#FFFFFF"
+                app:icon="@drawable/ic_baseline_send_24"
+                app:iconTint="@color/black" />
+        </LinearLayout>
 
 
     </com.google.android.material.appbar.AppBarLayout>
