--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -13,11 +13,9 @@
         android:layout_height="wrap_content"
         android:background="#4CAF50"
         android:fitsSystemWindows="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_main"
@@ -27,16 +25,19 @@
 
                 />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="42dp"
-                android:layout_height="match_parent"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="42dp"
+        android:layout_height="match_parent"
 
-                app:backgroundTint="#FFFFFF"
-                app:icon="@drawable/ic_baseline_send_24"
-                app:iconTint="@color/black" />
-        </LinearLayout>
-
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="3dp"
+        app:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_baseline_send_24"
+        app:iconTint="@color/black"
+        android:layout_marginRight="3dp"
+        android:layout_alignParentRight="true" />
+</RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
