--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,10 +68,10 @@
             app:layout_constraintTop_toBottomOf="@+id/intro"
             app:rippleColor="#3F51B5" />
 
-        <Button
+        <com.google.android.gms.common.SignInButton
             android:id="@+id/signUp"
             android:layout_width="150dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="5dp"
