--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
             app:layout_constraintTop_toBottomOf="@+id/intro"
             app:rippleColor="#3F51B5" />
 
-        <com.google.android.gms.common.SignInButton
+        <Button
             android:id="@+id/signUp"
             android:layout_width="150dp"
             android:layout_height="match_parent"
