--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/aboutfrag"
@@ -27,8 +28,6 @@
         android:id="@+id/myun"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:text="Username"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -38,10 +37,8 @@
 
     <TextView
         android:id="@+id/uslevl"
-        android:layout_width="149dp"
+        android:layout_width="100dp"
         android:layout_height="42dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:text="User level"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -54,6 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile">
 
@@ -242,6 +240,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/paycard">
 
@@ -289,6 +288,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loccard">
 
@@ -343,13 +343,11 @@
 
     <Button
         android:id="@+id/up_ul"
-        android:layout_width="54dp"
+        android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="9dp"
-        app:backgroundTint="@color/purple_200"
-        app:icon="@drawable/ic_baseline_upgrade_24"
+        android:text="Update"
+        app:backgroundTint="@color/teal_700"
         app:layout_constraintStart_toEndOf="@+id/uslevl"
         app:layout_constraintTop_toBottomOf="@+id/myun" />
 
