--- a/app/src/main/res/layout/activity_technician.xml
+++ b/app/src/main/res/layout/activity_technician.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/technician_bottom_nav"
-        tools:layout_editor_absoluteY="675dp" />
+        app:menu="@menu/technician_bottom_nav" />
 </androidx.constraintlayout.widget.ConstraintLayout>
