--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,10 +9,12 @@
     >
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#4CAF50"
         android:fitsSystemWindows="true">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -23,20 +25,16 @@
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"
 
-            />
+                />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="42dp"
+            <ImageButton
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="3dp"
-                app:backgroundTint="#FFFFFF"
-                app:icon="@drawable/ic_baseline_send_24"
-                app:iconTint="@color/black"
-                android:layout_marginRight="3dp"
-                android:layout_alignParentRight="true"
-            />
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/toolbar_main"
+                android:layout_toRightOf="@+id/toolbar_main"
+                android:foregroundGravity="right"
+                android:src="@drawable/ic_baseline_settings_24" />
         </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
